--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,9 @@ sidebar {
   height: calc(100vh - 56px);
   width: inherit;
   border-right: 2px solid #555; }
+  sidebar .logo {
+    width: 100%;
+    padding: 15px; }
   sidebar section > * {
     padding: 0 15px; }
   sidebar .playlist-item {
