--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,14 @@ sidebar {
   background: #303030;
   height: calc(100vh - 56px);
   width: inherit;
+  overflow-y: auto;
   border-right: 2px solid #555; }
+  sidebar::-webkit-scrollbar{
+    width: 10px;
+    background-color: #222; }
+  sidebar::-webkit-scrollbar-thumb{
+    background-color: black;
+    -webkit-border-radius: 1ex; }
   sidebar .logo {
     width: 100%;
     padding: 15px; }
